# VoiceToText

./: .gitignore  .hf_token.example  AGENTS.md  Makefile  README.md  cleanup.sh  env.sh  make_sample.sh  pyproject.toml  requirements.txt  transcribe.py
apps/api/: README.md  pyproject.toml
apps/api/src/stt_api/: __init__.py  jobs.py  main.py  notes.py  store.py  stream.py
apps/api/tests/: conftest.py  test_api.py  test_store.py
apps/cli/: pyproject.toml
apps/cli/src/stt_cli/: __init__.py  main.py
apps/web/: README.md  index.html  package-lock.json
apps/web/public/: pcm-worklet.js
apps/web/src/: App.tsx  index.css  theme.ts  types.ts
apps/web/src/components/: AppShell.tsx  DivitLogo.tsx  HomePage.tsx  Markdown.tsx  NoteDiff.tsx  NoteGenerator.tsx  NoteViewer.tsx  NotesHistory.tsx  NotesSidebar.tsx  PatientListPage.tsx  PatientPage.tsx  PatientSelector.tsx  ProgressScreen.tsx  SourceTranscript.tsx  StreamingRecorder.tsx  TemplateManager.tsx  TranscriptReviewPage.tsx  TranscriptViewer.tsx  TurnBubble.tsx  UploadScreen.tsx  VoiceRecorder.tsx  WorkspaceView.tsx
apps/web/src/config/: api.ts
apps/web/src/hooks/: useElapsed.ts
apps/web/src/utils/: Link.tsx  format.ts  noteExport.ts  router.ts  session.ts
eval/manifests/: smoke-en.json
specs/: FEATURES.md  design.md  product.md  requirements.md  structure.md  tech.md
specs/adr/: 0001-cpu-only.md  0002-load-bearing-version-pins.md  0003-self-contained-caches.md  0004-enhance-and-sensitive-vad-by-default.md  0005-diarizer-component-fallback.md  0006-monorepo-uv-workspace.md  0007-shared-core-import-not-subprocess.md  0008-fastapi-inprocess-jobs-sse.md  0009-clinical-note-pluggable-provider.md  0010-persistent-notes-sqlite.md  0011-selectable-note-provider-plugin-seam.md  0012-in-memory-sessions-refresh-safe.md  0013-in-app-voice-recording.md  0014-live-streaming-transcription.md  0015-editable-finalizable-notes.md  0016-patient-organization.md  0017-pytest-store-and-api-suite.md  0018-note-search.md  0019-audio-linked-source-transcript.md  0020-autosave-and-version-history.md  0021-custom-note-templates.md  0022-encounter-metadata.md  0023-problem-medication-extraction.md  0024-patient-pages-and-routing.md  0025-home-dashboard-and-nav.md  0026-turkish-accuracy-eval-harness.md  0027-turkish-defaults-and-speaker-hint.md  0028-asr-biasing-seam.md  0029-transcript-review-and-correction.md  0030-diarization-similar-voice-fix.md
specs/tasks/: DELIVERY-2026-07-08-tier2.md  DELIVERY-2026-07-08.md  TEMPLATE.md  audio-linked-transcript.md  autosave-version-history.md  clinical-note-generation.md  custom-note-templates.md  editable-finalizable-notes.md  encounter-metadata.md  home-dashboard-and-nav.md  live-streaming-transcription.md  note-export.md  note-search.md  patient-organization.md  patient-pages.md  problem-medication-extraction.md  voice-recording.md
