# Root of the uv workspace. Ties the Python packages together with ONE lockfile
# and editable interdependencies. The frontend (apps/web) is a separate npm
# project and is NOT part of this workspace.
[project]
name = "voicetotext-workspace"
version = "0.1.0"
description = "Speech-to-text + speaker diarization: shared core, CLI, and web API"
requires-python = ">=3.11,<3.12"

[tool.uv.workspace]
members = ["packages/*", "apps/cli", "apps/api"]

[tool.uv.sources]
stt-core = { workspace = true }
note-core = { workspace = true }

# Convenience: `uv run transcribe ...` from the repo root resolves the CLI.
# pytest is a dev-only dep for the store + API test suite (ADR-0017). It does NOT
# load the ML models (whisperx/torch/pyannote), so the suite runs in seconds.
[dependency-groups]
dev = ["pytest>=8.0"]

# Test config: tests live under apps/api/tests. httpx (already a FastAPI dep)
# backs FastAPI's TestClient; no ML models are imported by these tests.
[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
addopts = "-q"
