[project]
name = "stt-api"
version = "0.1.0"
description = "FastAPI backend wrapping the STT + diarization pipeline"
requires-python = ">=3.11,<3.12"
dependencies = [
    "stt-core",
    "note-core",                  # clinical note generation (pluggable AI provider)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",   # multipart file upload
    "sse-starlette>=2.1",         # Server-Sent Events for live progress
]

[project.scripts]
stt-api = "stt_api.main:run"

[tool.uv.sources]
stt-core = { workspace = true }
note-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stt_api"]
