[project]
name = "stt-cli"
version = "0.1.0"
description = "Command-line interface for the STT + diarization pipeline"
requires-python = ">=3.11,<3.12"
dependencies = [
    "stt-core",
    "tqdm>=4.66.0",
]

[project.scripts]
transcribe = "stt_cli.main:main"

[tool.uv.sources]
stt-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stt_cli"]
